--- a/index.html
+++ b/index.html
@@ -151,9 +151,10 @@
       <div class="grid grid-2">
         <div class="card pad reveal">
           <p><strong>Company:</strong> 1DAISY LLC<br>
+          <strong>Address:</strong> 27 Imperial Ln, Clayton, GA 30525-3500, United States<br>
           <strong>Phone:</strong> <a href="tel:+17752481547">+1 775 248 1547</a><br>
           <strong>Email:</strong> <a href="mailto:admin@dezoleswm.shop">admin@dezoleswm.shop</a></p>
-          <form onsubmit="event.preventDefault(); alert('Thanks! We will contact you shortly.');" style="margin-top:12px">
+          <form onsubmit="event.preventDefault(); alert('Thanks! We will contact you shortly.');" style="margin-top:12px"> onsubmit="event.preventDefault(); alert('Thanks! We will contact you shortly.');" style="margin-top:12px">
             <input aria-label="Your name" required placeholder="Your name" style="width:100%; padding:12px 14px; border-radius:12px; border:1px solid rgba(0,0,0,.12); margin-bottom:10px" />
             <input aria-label="Email" type="email" required placeholder="Email" style="width:100%; padding:12px 14px; border-radius:12px; border:1px solid rgba(0,0,0,.12); margin-bottom:10px" />
             <textarea rows="5" aria-label="Message" required placeholder="How can we help?" style="width:100%; padding:12px 14px; border-radius:12px; border:1px solid rgba(0,0,0,.12); margin-bottom:10px"></textarea>
@@ -161,12 +162,7 @@
           </form>
         </div>
         <div class="card pad reveal">
-          <h3 style="margin-top:0">FAQ</h3>
-          <ul style="margin:10px 0 0 18px; color:var(--muted); line-height:1.7">
-            <li>What areas do you serve? — Add your coverage.</li>
-            <li>How do quotes work? — Flat or hourly.</li>
-            <li>Payment options — Add accepted methods.</li>
-          </ul>
+          <iframe style="width:100%; height:340px; border:0; border-radius:14px" src="https://www.google.com/maps?q=27+Imperial+Ln,+Clayton,+GA+30525&output=embed" loading="lazy" referrerpolicy="no-referrer-when-downgrade" allowfullscreen></iframe>
         </div>
       </div>
     </div>
